# quorum_challenge

./: .env.development  .gitignore  pyproject.toml
src/: app.py
src/api/: controller.py
src/config/: settings.py
src/http/: controller.py
src/http/dto/: bill_summary.py  legislator_summary.py
src/persistence/: csv_reader.py
src/persistence/entity/: bill.py  legislator.py  models.py  vote.py  vote_result.py
src/persistence/repository/: csv_reader.py  repository.py
src/persistence/repository/tests/fixtures/: sample.csv
src/persistence/repository/tests/unit/: test_csv_reader.py  test_repository.py
src/view/: view.py
templates/: bills.html  legislators.html
