[tool.poetry]
name = "quorum"
version = "0.1.0"
description = ""
authors = ["Caio Marx Martins <caio.marx@onfly.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.6"
fastapi = "^0.115.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
